--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fuse.js": "^5.2.3",
     "hotkeys-js": "^3.7.3",
     "js-cookie": "^2.2.1",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.19",
     "lowdb": "^1.0.0",
     "nprogress": "^0.2.0",
@@ -32,6 +33,7 @@
     "vue-amap": "^0.5.10",
     "vue-i18n": "^8.15.1",
     "vue-router": "^3.1.3",
+    "vue2-leaflet": "^2.7.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
