--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hotkeys-js": "^3.7.3",
     "js-cookie": "^2.2.1",
     "leaflet": "^1.7.1",
+    "leaflet-polylinedecorator": "^1.6.0",
     "lodash": "^4.17.19",
     "lowdb": "^1.0.0",
     "nprogress": "^0.2.0",
@@ -34,6 +35,7 @@
     "vue-i18n": "^8.15.1",
     "vue-router": "^3.1.3",
     "vue2-leaflet": "^2.7.1",
+    "vue2-leaflet-polylinedecorator": "^2.0.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
